--- a/index.html
+++ b/index.html
@@ -1,1 +1,245 @@
-hi
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+		<title>Nomad</title>
+
+		<meta name="author" content="Kristin Beese" />
+		<meta name="Resource-type" content="Document" />
+
+		<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
+		<link href='http://fonts.googleapis.com/css?family=Oswald:400,300|Slabo+27px|Open+Sans+Condensed:300|Roboto:500,900,100,300,700,400' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="examples.css" />
+
+		<script src="jquery-1.8.2.min.js"></script>
+
+		<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-66879766-2', 'auto');
+  			ga('send', 'pageview');
+
+		</script>
+
+
+		<script type="text/javascript" src="jquery.fullPage.js"></script>
+
+		<script type="text/javascript">
+			$(document).ready(function() {
+				$('#fullpage').fullpage({
+					sectionsColor: ['#81cbad', '#4BBFC3', '#7BAABE', 'whitesmoke', '#ccddff'],
+					anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', 'lastPage'],
+					menu: '#menu',
+					afterLoad: function(anchorLink, index){
+
+						//section 2
+						if(index == 2){
+							//moving the image
+							$('#section1').find('img').delay(500).animate({
+								left: '0%'
+							}, 1500, 'easeOutExpo');
+
+							$('#section1').find('p').first().fadeIn(1800, function(){
+								$('#section1').find('p').last().fadeIn(1800);
+							});;
+
+						}
+
+						//section 3
+						if(anchorLink == '3rdPage'){
+							//moving the image
+							$('#section2').find('.intro').delay(500).animate({
+								left: '0%'
+							}, 1500, 'easeOutExpo');
+						}
+					}
+				});
+			});
+		</script>
+		<style>
+
+			#section1{
+				background:url("bg1.jpg") center top no-repeat; 
+				background-position: fixed;
+				background-color: #000000;
+				background-size: cover;
+			}
+
+			#section2{
+				background:url("bg2.jpg") center top no-repeat; 
+				background-position: fixed;
+				background-color: #000000;
+				background-size: cover;
+			}
+
+			#logo {
+				width: 25%;
+				margin-left: 30%;
+				margin-right: 30%;
+			}
+
+			#section3 img {
+				width: 20%;
+				margin-right: 40%;
+				margin-left: 40%;
+
+			}
+
+			h3 {
+				color: black;
+			}
+
+
+			#section3 h2, h3{
+				color: black;
+				padding: 1%;
+			}
+
+			#section0 {
+				background: #81cbad;
+			}
+
+			#section3 {
+				background: linear-gradient(#FFFFFF, #BABABA);
+			}
+
+			#white {
+				background-color: rgba(255, 255, 255, 0.45);
+				-webkit-background-size: cover;
+				padding-top: 3%;
+				padding-bottom: 3%;
+			}
+
+			h1 {
+				color: black;
+				font-size: 310%;
+				font-weight: 500;
+			}
+			#section1 p {
+				color: black;
+				font-size: 150%;
+				margin-left: 5%;
+				margin-right: 5%;
+				margin-top: 2%;
+				margin-bottom: 1%;
+			}
+
+			#section1 h2{
+				color: black;
+				font-size: 125%;
+				margin: 5%;
+				margin-top: 2%;
+				margin-bottom: 0;
+			}
+
+			#section1 h3 {
+				font-size: 255%;
+				font-weight: 500;
+				color: black;
+			}
+
+			#section0 h2 {
+				font-size: 200%;
+				color: white;
+				padding-top: 4%;
+				padding-bottom: 4%;
+				padding-left: 8%;
+				padding-right: 8%;
+			}
+
+			#app {
+				width: 20%;
+			}
+
+			#numlist {
+				text-align: left;
+			}
+
+			#section2 img {
+				height: 70%;
+				text-align: center;
+				margin: 0;
+			}
+
+			#section1 img {
+				float: left;
+				width: 13%;
+				margin: 3%;
+				margin-top: 0%;
+			
+			}
+
+			#section3 h3 {
+				font-size: 150%;
+			}
+
+			#section1 h1 {
+				padding: 0;
+				margin: 0;
+				padding-top: 5px;
+			}
+
+			#section3 p {
+				color: black;
+			}
+
+
+			a {
+				color: #81cbad;
+			}
+
+		</style>
+
+	</head>
+	<body>
+
+		<ul id="menu">
+			<li data-menuanchor="firstPage"><a href="#firstPage">Home</a></li>
+			<li data-menuanchor="secondPage"><a href="#secondPage">About</a></li>
+			<li data-menuanchor="3rdPage"><a href="#3rdPage">Screenshots</a></li>
+			<li data-menuanchor="4thpage"><a href="#4thpage">Support</a></li>
+		</ul>
+		<div id="fullpage">
+			<div class="section active" id="section0">
+				<p><img id="logo" src="logo.png"></p>
+				<p><img id="logo" src="nomad.png"></p><br>
+				<img id="logo" src="slogan.png">
+				<h2>an interactive travel scapbook</h2>
+				<img id="app" src="ios-coming-soon.png">
+			</div>
+
+			<div class="section" id="section1">
+
+				<div id="white">
+
+				
+					<h1 id="top">perfect for the adventurer</h1>
+					<h2>There are so many people of all ages who love to go on adventures, but documenting such trips is not so easy. Though GPS location and timestamps are automatically stored for pictures on iPhones, there is no way to clearly display the progression or the important highlights of a trip in a visual manner. The goal of this app is to pin pictures at locations with a description in order to have a visual scrapbook at the end of the trip. Even though there currently are some travel blogging and GPS tracking applications that can help track your trips, there is no single application that provides a cohesive overview. We can address this problem by organizing the different locations, media, and comments in a chronological list view for each trip with an additional mapview with pinpoints at each entry. </h2>
+
+				</div>
+
+			</div>
+
+			<div class="section" id="section2">
+			    <div class="slide active"><img src="screenshots/mockup/iPhone6-0-home_iphone6_gold_portrait.png"></div>
+			    <div class="slide active"><img src="screenshots/mockup/iPhone6-1-adventures_iphone6_gold_portrait.png"></div>
+			    <div class="slide active"><img src="screenshots/mockup/iPhone6-2-trip_iphone6_gold_portrait.png"></div>
+			    <div class="slide active"><img src="screenshots/mockup/iPhone6-3-map_iphone6_gold_portrait.png"></div>
+			    <div class="slide active"><img src="screenshots/mockup/iPhone6-4-trip_iphone6_gold_portrait.png"></div>
+			</div>
+
+			<div class="section" id="section3">
+				
+				<h1>comments, questions, or concerns?</h1>
+				<h3>Please contact our team</h3>
+				<p><a href="mailto:kristinbeese@gmail.com"><b>email us</b></a><p>
+				<p><a href="https://github.com/beese/project-nomad"><b>github</b></a><p>
+			</div>
+		</div>
+
+	</body>
+</html>
