--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				<p><img id="logo" src="logo.png"></p>
 				<p><img id="logo" src="nomad.png"></p><br>
 				<img id="logo" src="slogan.png">
-				<h2>an interactive travel scapbook</h2>
+				<h2>an interactive travel scrapbook</h2>
 				<img id="app" src="ios-coming-soon.png">
 			</div>
 
