--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
 
 				
 					<h1 id="top">perfect for the adventurer</h1>
-					<h2><p>There are so many people of all ages who love to go on adventures, but documenting such trips is not so easy. Though GPS location and timestamps are automatically stored for pictures on iPhones, there is no way to clearly display the progression or the important highlights of a trip in a visual manner. The goal of this app is to pin pictures at locations with a description in order to have a visual scrapbook at the end of the trip. Even though there currently are some travel blogging and GPS tracking applications that can help track your trips, there is no single application that provides a cohesive overview. We can address this problem by organizing the different locations, media, and comments in a chronological list view for each trip with an additional mapview with pinpoints at each entry.</p>
-					<ul>
+					<h2>There are so many people of all ages who love to go on adventures, but documenting such trips is not so easy. Though GPS location and timestamps are automatically stored for pictures on iPhones, there is no way to clearly display the progression or the important highlights of a trip in a visual manner. The goal of this app is to pin pictures at locations with a description in order to have a visual scrapbook at the end of the trip. Even though there currently are some travel blogging and GPS tracking applications that can help track your trips, there is no single application that provides a cohesive overview. We can address this problem by organizing the different locations, media, and comments in a chronological list view for each trip with an additional mapview with pinpoints at each entry.
+					<ul style="list-style-type:disc">
 					  <li>View and share adventures</li>
 					  <li>Add entries with details and photos</li>
 					  <li>View map of entries</li>
