--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
 				color: black;
 			}
 
+			#list {
+				color: black;
+				font-size: 125%;
+
+			}
 
 			#section3 h2, h3{
 				color: black;
@@ -130,7 +135,7 @@
 
 			#section1 h2{
 				color: black;
-				font-size: 125%;
+				font-size: 150%;
 				margin: 5%;
 				margin-top: 2%;
 				margin-bottom: 0;
@@ -219,10 +224,12 @@
 				
 					<h1 id="top">perfect for the adventurer</h1>
 					<h2>Easily and conveniently document and share your experiences</h2>
+					<p>
+					</p>
 					<ul id="list" style="list-style-type:disc">
-					  <li>View and share adventures</li>
-					  <li>Add entries with details and photos</li>
-					  <li>View map of entries</li>
+					  <li>-View and share adventures-</li>
+					  <li>-Add entries with details and photos-</li>
+					  <li>-View map of entries-</li>
 					</ul></h2>
 				</div>
 
