links to app in ios app store

--- a/index.html
+++ b/index.html
@@ -214,7 +214,10 @@
 				<p><img id="logo" src="nomad.png"></p><br>
 				<img id="logo" src="slogan.png">
 				<h2>an interactive travel scrapbook</h2>
-				<img id="app" src="ios-coming-soon.png">
+				<a href="https://appsto.re/us/-Rqfcb.i">
+					<img id="app" src="ios-store.png"> 
+				</a>
+				
 			</div>
 
 			<div class="section" id="section1">
