open links in new tab

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 				<p><img id="logo" src="nomad.png"></p><br>
 				<img id="logo" src="slogan.png">
 				<h2>an interactive travel scrapbook</h2>
-				<a href="https://appsto.re/us/-Rqfcb.i">
+				<a target="_blank" href="https://appsto.re/us/-Rqfcb.i">
 					<img id="app" src="ios-store.png"> 
 				</a>
 				
@@ -250,8 +250,8 @@
 				
 				<h1>comments, questions, or concerns?</h1>
 				<h3>Please contact our team</h3>
-				<p><a href="mailto:kristinbeese@gmail.com"><b>email us</b></a><p>
-				<p><a href="https://github.com/beese/project-nomad"><b>github</b></a><p>
+				<p><a target="_blank" href="mailto:kristinbeese@gmail.com"><b>email us</b></a><p>
+				<p><a target="_blank" href="https://github.com/beese/project-nomad"><b>github</b></a><p>
 			</div>
 		</div>
 
